--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Financaial Reporting</h3>
-                  <p>Studying</p>
+                  <p>Completed(73%)</p>
                 </div>
               </article>
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Audit & Assurance</h3>
-                  <p>Studying Soon </p>
+                  <p>Studying</p>
                 </div>
               </article>
               <article>
